# projeto_flask

./: .gitignore  README.md  produtos.csv  pyproject.toml
lelet_projeto/: app.py  app2.py
lelet_projeto/static/: style2.css
lelet_projeto/templates/: base.html  base2.html  cadastrar-produto.html  criar-cnpj.html  criar-cpf.html  produto.html  produtos.html  validar-cnpj.html  validar-cpf.html  validar-resultado.html
meu_projeto_flask/: app.py
meu_projeto_flask/templates/: home.html  produtos.html
